fixed overflow styling

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,6 @@ html {
   background: url(../images/bojackBackground.png);
   background-size: cover;
   font-family: "Ness";
-  overflow: hidden;
   color: white;
   text-shadow: 1px 1px 2px black, 0 0 5px black, 0 0 5px black;
 }
